--- a/matlab/fmm3dbie_routs.mw
+++ b/matlab/fmm3dbie_routs.mw
@@ -4872,3 +4872,467 @@ end
 %
 %
 %
+%----------------------------------------
+%%
+%%   Maxwell dielectric routines
+%
+%
+%-------------------------------------------------
+
+@ +em3d/+dielectric/eval.m 
+function [E, H] = eval(S, densities, targinfo, eps, om, rep_params, varargin)
+%
+%  em3d.dielectric.eval
+%
+%    This subroutine evaluates the electric and magnetic
+%    field at a colelction of targets given the solution
+%    to the corresponding integral equation
+%
+%
+%  Notes for this routine:
+%  The PDE takes the form
+%  1v) \nabla \times E =  i\om \mu H
+%  2v) \nabla \cdot  E =     0
+%  3v) \nabla \times H = -i\om \ep E
+%  4v) \nabla \cdot  H =     0
+%  
+%  where E is the electric field, H is the magnetic field, 
+%  and \om is the wavenumber, \ep is the permittivity, 
+%  and \mu is the permeability
+%
+%  The dielectric boundary conditions are given by
+%  1b) n \times (E0 + E_in) = n \times E1
+%  2b) n \times (H0 + H_in) = n \times H1
+%
+%  where (E_in, H_in) are the incoming electric and magnetic 
+%  fields, E0, H0 are the fields in the exterior, and 
+%  E1, H1 are the fields in the interior
+% 
+%  This routine will support the following representations:
+%  * muller   (Muller integral equation)
+%
+%  For notes on the specific representations, boundary integral equations,
+%  and order of kernels returned by this routine, checkout
+%  em3d.dielectric.Contents.m
+%
+%  Syntax
+%   [E, H] = em3d.dielectric.eval(S, densities, targinfo, eps, zk, rep_params)
+%   [E, H] = em3d.dielectric.eval(S, densities, targinfo, eps, zk, rep_params, opts)
+%
+%  Note: No quadrature corrections are currently used 
+%
+%  Input arguments:
+%    * S: surfer object, see README.md in matlab for details
+%    * densities: layer potential densities, of size (ndim, npts)
+%        where ndim depends on the integral representation used
+%    * targinfo: target info 
+%       targinfo.r = (3,nt) target locations
+%       targinfo.patch_id (nt,) patch id of target, = -1, if target
+%          is off-surface (optional)
+%       targinfo.uvs_targ (2,nt) local uv ccordinates of target on
+%          patch if on-surface (optional)
+%    * eps: precision requested
+%    * om : wave number
+%    * rep_params: parameters for integral representation 
+%                  for muller, it should be a 4 vector
+%                  consisting of [\ep0, \mu0, \ep1, \mu1]
+%    * opts: options struct
+%        opts.rep - integral representation being used
+%                         Supported representations
+%                         'muller'
+%        opts.nonsmoothonly - use smooth quadrature rule for
+%                             evaluating layer potential (true)
+%        opts.precomp_quadrature: precomputed quadrature corrections struct 
+%           currently only supports quadrature corrections
+%           computed in rsc format (currently not supported) 
+%        opts.in - boolean index of which points are inside the domain
+%           targ(:,in) are the interior targets, and targ(:,~in) are
+%           the exterior targets
+%
+%
+%
+
+    if(nargin < 7) 
+      opts = [];
+    else
+      opts = varargin{1};
+    end
+
+    nonsmoothonly = true;
+    if(isfield(opts,'nonsmoothonly'))
+      nonsmoothonly = opts.nonsmoothonly;
+    end
+
+    isprecompq = false;
+    if isfield(opts, 'precomp_quadrature')
+      Q = opts.precomp_quadrature;
+      isprecompq = true;
+    end
+
+    rep = 'muller';
+
+    if isfield(opts, 'rep')
+      rep = opts.rep;
+    end
+
+    if isfield(opts, 'in')
+      in = opts.in;
+    else
+      sigma = ones(S.npts,1);
+      flagext = lap3d.eval(S, 'double', sigma, targinfo, eps);
+      in = find(flagext<=-0.5);
+    end
+
+
+% Extract arrays
+    [srcvals,srccoefs,norders,ixyzs,iptype,wts] = extract_arrays(S);
+    [n12,npts] = size(srcvals);
+    [n9,~] = size(srccoefs);
+    [npatches,~] = size(norders);
+    npatp1 = npatches+1;
+
+    ff = 'rsc';
+
+    [targs] = extract_targ_array(targinfo);
+    [ndtarg,ntarg] = size(targs);
+    ntargp1 = ntarg+1;
+
+    targin = targs(:,in);
+    targout = targs(:,~in);
+    
+    [~, ntin] = size(targin);
+    [~, ntout] = size(targout);
+
+    E = complex(zeros(3,ntarg));
+    H = complex(zeros(3,ntarg));
+    
+    Ein = complex(zeros(3,ntin));
+    Hin = complex(zeros(3,ntin));
+
+    Eout = complex(zeros(3,ntout));
+    Hout = complex(zeros(3,ntout));
+    zpars = complex([om rep_params(:).']);
+
+    
+    if (ntin > 0)
+      iside = 1;
+      # FORTRAN em_muller_trans_eval_oneside(double[1] eps, dcomplex[npts,4] densities, dcomplex[5] zpars, int[1] npts, double[npts] wts, double[12,npts] srcvals, int[1] ntin, double[3,ntin] targin, int[1] iside, inout dcomplex[3,ntin] Ein, inout dcomplex[3,ntin] Hin);
+      E(:,in) = Ein;
+      H(:,in) = Hin;
+    end
+
+    if(ntout > 0)
+      iside = 0;
+      # FORTRAN em_muller_trans_eval_oneside(double[1] eps, dcomplex[npts,4] densities, dcomplex[5] zpars, int[1] npts, double[npts] wts, double[12,npts] srcvals, int[1] ntout, double[3,ntout] targout, int[1] iside, inout dcomplex[3,ntout] Eout, inout dcomplex[3,ntout] Hout);
+      E(:,out) = Eout;
+      H(:,out) = Hout;
+    end
+
+end    
+%
+%
+%
+%----------------------------------
+%
+@ +em3d/+dielectric/get_quadrature_correction.m 
+function Q = get_quadrature_correction(S, eps, om, rep_params)
+%
+%  em3d.dielectric.get_quadrature_correction
+%    This subroutine returns the near quadrature correction
+%    for the chosen maxwell representation, with densities supported
+%    on the surface, and targets given by targinfo 
+%    as a cell array of sparse matrices or an array of matrices
+%    in the rsc format, where each folumn of the matrix is the
+%    representation of the sparse matrix corresponding to one
+%    of the kernels
+%
+%  Notes for this routine:
+%  The PDE takes the form
+%  1v) \nabla \times E =  i\om \mu H
+%  2v) \nabla \cdot  E =     0
+%  3v) \nabla \times H = -i\om \ep E
+%  4v) \nabla \cdot  H =     0
+%  
+%  where E is the electric field, H is the magnetic field, 
+%  and \om is the wavenumber, \ep is the permittivity, 
+%  and \mu is the permeability
+%
+%  The dielectric boundary conditions are given by
+%  1b) n \times (E0 + E_in) = n \times E1
+%  2b) n \times (H0 + H_in) = n \times H1
+%
+%  where (E_in, H_in) are the incoming electric and magnetic 
+%  fields, E0, H0 are the fields in the exterior, and
+%  (E1, H1) are the fields in the interior
+%
+%  Syntax
+%   Q = em3d.pec.get_quadrature_correction(S,eps,zk,rep_params)
+%
+%
+%  Input arguments:
+%    * S: surfer object, see README.md in matlab for details
+%    * eps: precision requested
+%    * om: wave number
+%    * rep_params: parameters for integral representation 
+%                  for muller, it should be a 4 vector
+%                  consisting of [\ep0, \mu0, \ep1, \mu1]
+%
+
+    [srcvals,srccoefs,norders,ixyzs,iptype,wts] = extract_arrays(S);
+    [n12,npts] = size(srcvals);
+    [n9,~] = size(srccoefs);
+    [npatches,~] = size(norders);
+    npatp1 = npatches+1;
+    npp1 = npatches+1;
+    nsp1 = npts + 1;
+    n3 = 3;
+
+
+    ff = 'rsc';
+
+    tinfouse = [];
+    tinfouse.r = S.r;
+    tinfouse.du = S.du;
+    tinfouse.dv = S.dv;
+    tinfouse.n = S.n;
+    tinfouse.patch_id = S.patch_id;
+    tinfouse.uvs_targ = S.uvs_targ;
+
+
+    targs = extract_targ_array(tinfouse); 
+    [ndtarg,ntarg] = size(targs);
+    ntargp1 = ntarg+1;
+    
+    if(isfield(tinfouse,'patch_id') || isprop(tinfouse,'patch_id'))
+      patch_id = tinfouse.patch_id;
+    else
+      patch_id = zeros(ntarg,1);
+    end
+
+    if(isfield(tinfouse,'uvs_targ') || isprop(tinfouse,'uvs_targ'))
+      uvs_targ = tinfouse.uvs_targ;
+    else
+      uvs_targ = zeros(2,ntarg);
+    end
+
+    if(length(patch_id)~=ntarg)
+      fprintf('Incorrect size of patch id in target info struct. Aborting! \n');
+    end
+
+    [n1,n2] = size(uvs_targ);
+    if(n1 ~=2 && n2 ~=ntarg)
+      fprintf('Incorrect size of uvs_targ array in targinfo struct. Aborting! \n');
+    end
+
+
+    
+    iptype0 = iptype(1);
+    norder0 = norders(1);
+    rfac = 0.0;
+    rfac0 = 0.0;
+    # FORTRAN get_rfacs(int[1] norder0, int[1] iptype0, inout double[1] rfac, inout double[1] rfac0);
+    
+
+    cms = zeros(3,npatches);
+    rads = zeros(npatches,1);
+    # FORTRAN get_centroid_rads(int[1] npatches,int[npatches] norders,int[npp1] ixyzs,int[npatches] iptype,int[1] npts,double[n9,npts] srccoefs,inout double[n3,npatches] cms,inout double[npatches] rads);
+
+    rad_near = rads*rfac;
+    nnz = 0;
+    # FORTRAN findnearmem(double[n3,npatches] cms,int[1] npatches,double[npatches] rad_near,int[1] ndtarg,double [ndtarg,ntarg] targs,int[1] ntarg,inout int[1] nnz);
+
+    row_ptr = zeros(ntarg+1,1);
+    col_ind = zeros(nnz,1);
+    ntp1 = ntarg+1;
+    nnzp1 = nnz+1;
+    # FORTRAN findnear(double[n3,npatches] cms,int[1] npatches,double[npatches] rad_near,int[1] ndtarg,double [ndtarg,ntarg] targs, int[1] ntarg,inout int[ntp1] row_ptr,inout int[nnz] col_ind); 
+
+    iquad = zeros(nnz+1,1);
+    # FORTRAN get_iquad_rsc(int[1] npatches,int[npp1] ixyzs,int[1] npts,int[1] nnz,int[ntp1] row_ptr,int[nnz] col_ind,inout int[nnzp1] iquad);
+
+    nquad = iquad(nnz+1)-1;
+    iquadtype = 1;
+
+    nker = 16;
+    zpars = complex([om rep_params(:).']);
+    wnear = complex(zeros(nquad,nker));
+    # FORTRAN getnearquad_em_muller_trans(int[1] npatches, int[npatches] norders, int[npp1] ixyzs, int[npatches] iptype, int[1] npts, double[n9,npts] srccoefs, double[n12,npts] srcvals, int[1] ndtarg, int[1] ntarg, double[ndtarg,ntarg] targs, int[ntarg] patch_id, double[2,ntarg] uvs_targ, double[1] eps, dcomplex[5] zpars, int[1] iquadtype, int[1] nnz, int[ntp1] row_ptr, int[nnz] col_ind, int[nnzp1] iquad, double[1] rfac0,int[1] nquad, inout dcomplex[nquad,nker] wnear);
+
+    Q = [];
+    Q.targinfo = tinfouse;
+    Q.ifcomplex = 1;
+    Q.wavenumber = om;
+    Q.kernel_order = -1;
+    Q.rfac = rfac;
+    Q.nquad = nquad;
+    Q.format = ff;
+    Q.kernel_order = 0;
+
+    Q.iquad = iquad;
+    Q.wnear = wnear;
+    Q.row_ptr = row_ptr;
+    Q.col_ind = col_ind;
+    
+end
+%
+%
+%
+%-------------------------------------------------
+
+@ +em3d/+dielectric/solver.m 
+function [densities, varargout] = solver(S, einc, hinc, eps, om, rep_params, opts)
+%
+%  em3d.dielectric.solver
+%    Solve the Maxwell dielectric boundary value problem
+%
+%  Syntax
+%   [densities] = em3d.dielectric.solver(S, einc, hinc, eps, om, rep_params)
+%   [densities] = em3d.dielectric.solver(S, einc, hinc, eps, om, rep_params, opts)
+%
+%  This routine will support the following representations:
+%  * muller   
+%
+%  For notes on the specific representations, boundary integral equations,
+%  and order of kernels returned by this routine, checkout
+%  em3d.dielectric.Contents.m
+%
+%  Input arguments:
+%    * S: surfer object, see README.md in matlab for details
+%    * einc, hinc: incident electric and magnetic fields 
+%    * eps: precision requested
+%    * om: wave number
+%    * rep_params: parameters for integral representation 
+%                  for muller, it should be a 4 vector
+%                  consisting of [\ep0, \mu0, \ep1, \mu1]
+%    * opts: options struct
+%        opts.nonsmoothonly - use smooth quadrature rule for evaluating
+%           layer potential (false)
+%        opts.eps_gmres - tolerance to which linear system is to be
+%           solved (eps_gmres = eps)
+%        opts.maxit - maximum number of gmres iterations (200)
+%        opts.quadrature_correction - precomputed quadrature correction ([])
+%        opts.rep - integral representation being used
+%                         Supported representations
+%
+%  Output arguemnts:
+%    * densities: layer potential density
+%    
+%
+    
+    if(nargin < 7) 
+      opts = [];
+    end
+
+    nonsmoothonly = false;
+    if(isfield(opts,'nonsmoothonly'))
+      nonsmoothonly = opts.nonsmoothonly;
+    end
+
+    rep = 'muller';
+    if isfield(opts, 'rep')
+      rep = opts.rep;
+    end
+
+    if strcmpi(rep, 'muller')
+      nker = 16;
+    end
+
+    eps_gmres = eps;
+    if(isfield(opts,'eps_gmres'))
+      eps_gmres = opts.eps_gmres;
+    end
+
+    maxit = 200;
+    if(isfield(opts,'maxit'))
+      maxit = opts.maxit;
+    end
+
+
+% Extract arrays
+    [srcvals,srccoefs,norders,ixyzs,iptype,wts] = extract_arrays(S);
+    [n12,npts] = size(srcvals);
+    [n9,~] = size(srccoefs);
+    [npatches,~] = size(norders);
+    npatp1 = npatches+1;
+
+    targinfo = [];
+    targinfo.r = S.r;
+    targinfo.du = S.du;
+    targinfo.dv = S.dv;
+    targinfo.n = S.n;
+    patch_id  = zeros(npts,1);
+    uvs_targ = zeros(2,npts);
+    # FORTRAN get_patch_id_uvs(int[1] npatches, int[npatches] norders, int[npatp1] ixyzs, int[npatches] iptype, int[1] npts, inout int[npts] patch_id, inout double[2,npts] uvs_targ);
+    targinfo.patch_id = patch_id;
+    targinfo.uvs_targ = uvs_targ;
+
+    ff = 'rsc';
+
+    nptsp1 = npts+1;
+
+% Compute quadrature corrections    
+    if(~nonsmoothonly)
+
+      if isfield(opts, 'quadrature_correction')
+         Q = opts.quadrature_correction;
+      else
+         Q = em3d.dielectric.get_quadrature_correction(S,eps,om,rep_params);
+      end
+    else
+      opts_qcorr = [];
+      opts_qcorr.type = 'complex';
+      opts_qcorr.nker = nker;
+      Q = init_empty_quadrature_correction(S,opts_qcorr);
+    end
+    nnz = length(Q.col_ind);
+    nquad = Q.iquad(end)-1;
+    nnzp1 = nnz+1; 
+
+    [novers] = get_oversampling_parameters(S,Q,eps);
+    Sover = oversample(S,novers);
+
+
+% Extract oversampled arrays
+
+    [srcover,~,~,ixyzso,~,wover] = extract_arrays(Sover);
+    nptso = Sover.npts; 
+
+% Extract quadrature arrays
+    row_ptr = Q.row_ptr;
+    col_ind = Q.col_ind;
+    iquad = Q.iquad;
+    wnear = Q.wnear;
+
+
+    niter = 0;
+    errs = zeros(maxit+1,1);
+    maxitp1 = maxit + 1;
+    rres = 0;
+
+    ep0 = rep_params(1);
+    mu0 = rep_params(2);
+    ep1 = rep_params(3);
+    mu1 = rep_params(4);
+
+    rhs = complex(zeros(npts,4));
+
+    rhs(:,1) = -sum(einc.*S.drv, 1).'/(mu0 + mu1);
+    rhs(:,2) = sum(einc.*S.dru, 1).'/(mu0 + mu1);
+    rhs(:,3) = -sum(hinc.*S.drv, 1).'/(ep0 + ep1);
+    rhs(:,4) = sum(hinc.*S.dru, 1).'/(ep0 + ep1);
+
+    densities = complex(zeros(npts,4));
+    zpars = complex([om, rep_params(:).']);
+
+
+% Call the solver 
+    # FORTRAN em_muller_trans_solver_guru(int[1] npatches, int[npatches] norders, int[npatp1] ixyzs, int[npatches] iptype, int[1] npts, double[n9,npts] srccoefs, double[n12,npts] srcvals, double[1] eps, dcomplex[5] zpars, int[1] maxit, dcomplex[npts,4] rhs, int[1] nnz, int[nptsp1] row_ptr, int[nnz] col_ind, int[nnzp1] iquad, int[1] nquad, dcomplex[nquad,nker] wnear, int[npatches] novers, int[1] nptso, int[npatp1] ixyzso, double[12,nptso] srcover, double[nptso] wover, double[1] eps_gmres, inout int[1] niter, inout double[maxitp1] errs, inout double[1] rres, inout dcomplex[npts,4] densities);
+
+    errs = errs(1:niter);
+    varargout{1} = errs;
+    varargout{2} = rres;
+    varargout{3} = Q;
+end    
+%
+%
+%
